# smart-home-controller

./: Cargo.toml  README.md  config.toml
docs/: audio.md  ble.md  display.md  main.md  server.md  utils.md
src/: audio.rs  ble.rs  display.rs  main.rs  server.rs
src/src/: utils.rs
