[package]
name = "smart-home-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.29.0", features = ["binstart"] }
esp-idf-svc = "0.29.0"
esp-idf-hal = "0.29.0"
embedded-hal = "0.2.7"
embedded-svc = "0.22.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
toml = "0.5"
